# cabinet

./: 404.html  README.md  index.html  justfile  mkdocs.yml  mm.txt  noxfile.py  objects.inv  pyproject.toml  test_mm.py
.github/workflows/: cd.yml  ci.yml  testing.yml
api_reference/: index.html
api_reference/cleaning_drawer/: index.html
api_reference/umls_drawer/: index.html
app/: main.py
data/: open-data-releases.json
docs/: index.md
docs/api_reference/: cleaning_drawer.md  index.md  umls_drawer.md
docs/source/: cabinet.cleaning_drawer.rst  cabinet.rst  cabinet.umls_drawer.rst  conf.py  index.rst  modules.rst
python/cabinet/: __init__.py
python/cabinet/cleaning_drawer/: normalize.py
python/cabinet/nlp_drawer/: metamap.py  scispacy.py
resources/: Install_and_Start_MetaMap.html
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: generate_cui_to_snomed_map.py  generate_snomed_tree.py  test_generator_scripts.py
search/: search_index.json
src/cabinet/: __init__.py  utils.py
src/cabinet/cleaning_drawer/: __init__.py  normalize.py
src/cabinet/data/: cui_to_snomed.xz  snomed_tree.xz
src/cabinet/nlp_drawer/: scispacy.py
src/cabinet/stimulant-search/: algos.py
src/cabinet/umls_drawer/: __init__.py  knowledge_base.py  metamap.py  metamap_ner.py  scispacy.py  scispacy_ner.py
tests/: test_cleaning_drawer.py  test_pkg_data.py
tests/test_umls_drawer/: test_knowledge.py
