[tool.poetry]
name = "cabinet"
version = "0.1.0"
description = "Utility functions package for IPOP data scientists"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "AGPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
rich = "^13.3.3"
tqdm = "^4.65.0"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
orjson = "^3.8.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
pytest = "^7.3.0"
ipython = "^8.12.0"
mypy = "^1.2.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
